feat: add dotcom theme

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
 /* Themes */
 @import './themes/default.css';
 @import './themes/dark.css';
+@import './themes/dotcom.css';
 @import './themes/cyberpunk.css';
 @import './themes/halloween.css';
 @import './themes/thanksgiving.css';
