feat: add april fools theme + fix nav during event

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,7 @@
 @import './themes/st-patricks.css';
 @import './themes/matrix.css';
 @import './themes/pride.css';
+@import './themes/april-fools.css';
 
 /* Category CSS */
 @import './navigation.css';
